--- a/style.css
+++ b/style.css
@@ -9,38 +9,43 @@ body {
 
 header {
     background-color: #000;
-    color: #ff0;
+    color: #FFD700;
     display: flex;
-    align-items: center;
     justify-content: space-between;
+    align-items: center;
     padding: 10px 20px;
 }
 
+/* logo design*/
 header .logo {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 1.5em;
-    font-weight: 700;
+    display: flex;
+    align-items: center;
 }
 
+header .logo img {
+    height: 50px;
+    margin-right: 10px;
+}
 header nav ul {
     list-style: none;
-    display: flex;
     margin: 0;
     padding: 0;
+    display: flex;
 }
 
 header nav ul li {
-    margin-left: 20px;
+    margin: 0 15px;
 }
 
 header nav ul li a {
-    color: #ff0;
+    color: #FFD700;
     text-decoration: none;
-    transition: color 0.3s;
+    font-weight: bold;
+    transition: color 0.3s ease;
 }
 
 header nav ul li a:hover {
-    color: #fff;
+    color: #FFF;
 }
 
 .container {
@@ -88,3 +93,32 @@ footer {
     border: 3px solid #ff0;
 }
 
+main {
+    padding: 20px;
+}
+
+.contact-info {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.contact-info h2 {
+    color: #FFD700;
+}
+
+.images {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 20px;
+}
+
+.images img {
+    width: 45%;
+    border-radius: 10px;
+}
+
+footer {
+    text-align: center;
+}
