--- a/style.css
+++ b/style.css
@@ -93,6 +93,7 @@ footer {
     border: 3px solid #ff0;
 }
 
+/* Contact Us page styling*/
 main {
     padding: 20px;
 }
@@ -122,3 +123,5 @@ main {
 footer {
     text-align: center;
 }
+/* Products Page Styling */
+
